--- a/HttpLibrary/HttpLibrary.csproj
+++ b/HttpLibrary/HttpLibrary.csproj
@@ -60,15 +60,16 @@
     <Compile Include="Containers\LoginModel.cs" />
     <Compile Include="Containers\Rate.cs" />
     <Compile Include="Containers\UserData.cs" />
-    <Compile Include="SOM\Api\PostsSource.cs" />
-    <Compile Include="SOM\Api\PostsRatesSource.cs" />
-    <Compile Include="SOM\BaseSOM.cs" />
-    <Compile Include="SOM\Users\Login\LoginSource.cs" />
-    <Compile Include="SOM\Users\TestAuth\TestAuthSource.cs" />
-    <Compile Include="SOM\Users\UsersSource.cs" />
+    <Compile Include="SOM\Api\Comments\CommentsResource.cs" />
+    <Compile Include="SOM\Api\Posts\PostsResource.cs" />
+    <Compile Include="SOM\Api\Posts\Rates\PostsRatesResource.cs" />
+    <Compile Include="SOM\BaseROM.cs" />
+    <Compile Include="SOM\Users\Login\LoginResource.cs" />
+    <Compile Include="SOM\Users\TestAuth\TestAuthResource.cs" />
+    <Compile Include="SOM\Users\UsersResource.cs" />
     <Compile Include="Wrappers\ClientFactory.cs" />
     <Compile Include="Wrappers\ClientWrapper.cs" />
-    <Compile Include="Containers\Post.cs" />
+    <Compile Include="Containers\PostInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wrappers\RequestWrapper.cs" />
     <Compile Include="Wrappers\ResponseWrapper.cs" />
